fix latest problems

--- a/src/components/MultiDropdown/MultiDropdown.module.scss
+++ b/src/components/MultiDropdown/MultiDropdown.module.scss
@@ -32,7 +32,7 @@ li button {
     width: 11px;
     height: 7px;
     top: calc(50% - 3.5px);
-    background-image: url('img/Vector.png');
+    background-image: url('./Vector.png');
   }
 
   &:focus {
