--- a/src/pages/Entities/Entities.module.scss
+++ b/src/pages/Entities/Entities.module.scss
@@ -26,7 +26,7 @@
     left: -14px;
     width: 14px;
     height: 14px;
-    background-image: url('img/Colored star.png');
+    background-image: url('./Colored\ star.png');
   }
 }
 
