--- a/src/components/MultiDropdown/MultiDropdown.module.scss
+++ b/src/components/MultiDropdown/MultiDropdown.module.scss
@@ -1,6 +1,5 @@
 :root {
   --min-width: 370px;
-  // к сожалению, в scss нельзя динамически изменять стили в переменных (ну или я не нашёл)
 }
 
 .multi-dropdown {
@@ -8,7 +7,7 @@
 }
 
 .title,
-li button {
+.li button {
   height: 50px;
   min-width: var(--min-width);
   background: #FFFFFF;
@@ -20,6 +19,11 @@ li button {
   overflow: hidden;
   text-overflow: ellipsis;
   position: relative;
+  cursor: pointer;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 160px;
 }
 
 .title {
@@ -46,14 +50,15 @@ li button {
 }
 
 
-ul {
+.ul {
   display: block;
   list-style: none;
   padding: 0;
   margin: 8px 0;
+  position: absolute;
 }
 
-li {
+.li {
   min-width: var(--min-width);
   height: 50px;
 
