--- a/src/components/MultiDropdown/MultiDropdown.module.scss
+++ b/src/components/MultiDropdown/MultiDropdown.module.scss
@@ -10,7 +10,7 @@
 .li button {
   height: 50px;
   min-width: var(--min-width);
-  background: #FFFFFF;
+  background: white;
   border: 1px solid #D9D9D9;
   box-sizing: border-box;
   padding: 12px 17px;
@@ -78,7 +78,7 @@
   }
 }
 
-.checked {
+.li .checked {
   background: #F1F1F1;
 }
 
